0.8.0
 - Now supports rule-wise logging of changes by integration with the
   'lumberjack' package.
 - 'modifier' now reads rules and metadata from data frame
 - Fix: constructions with single values such as 
   if (is.na(x)) x <- mean(x, na.rm=TRUE) now work correctly.
 - Vignette updated and now rendered with 'simplermarkdown'
 - Improved documentation (thanks to Jordi van Dooren)
 

0.1.9
 - Improved documentation (Thanks to GH user Bas)
 - Fix for NULL and NA in condition

0.1.5
 - Added 'markdown' as Suggests, as requested by CRAN.
0.1.1
 - First release