@@ -19,7 +19,7 @@ Description: Data cleaning scripts typically contain a lot of 'if this change th
     With this package, such 'data modifying rules' are taken out of the code and
     become in stead parameters to the work flow. This allows one to maintain, document,
     and reason about data modification rules as separate entities.
-Version: 0.7.0
+Version: 0.8.0
 Depends: methods
 URL: https://github.com/data-cleaning/dcmodify
 BugReports: https://github.com/data-cleaning/dcmodify/issues
